# ontoprism

./: .coverage.codebook_local.pid30364.XN1XiaPx.HKqR90PXvhdh  .coverage.codebook_local.pid30365.Xtr3csCx.H29m7tUCV4zh  .coverage.codebook_local.pid30366.XYVEnLUx.HPiCuV209rYh  .coverage.codebook_local.pid30367.X8TsLZnx.Hu1Q0T6sq8Dh  .coverage.codebook_local.pid30368.XC12m2kx.HHb30Zj0Nh9h  .coverage.codebook_local.pid30369.XxZekvbx.Hoo4bbz83b1h  .coverage.codebook_local.pid30370.Xv2Qpntx.HA0vJBXz2zgh  .coverage.codebook_local.pid30371.X12L0cNx.HqQCVdvUGT3h  .coverage.codebook_local.pid30372.XbxtKxAx.HynVypz2csGh  .coverage.codebook_local.pid30373.Xmu4FNGx.HrewAzKIIgCh  .coverage.codebook_local.pid30374.XfjTCjYx.Hbo7Fc0Myjah  .coverage.codebook_local.pid30375.XevjJgvx.HNniv6S7qGvh  .coverage.codebook_local.pid30376.XUeveVsx.HcIYNl3rkKMh  .coverage.codebook_local.pid30377.XnJcdkex.Hf0pwb57lKyh  .coverage.codebook_local.pid30378.Xua5X1yx.Hq8rNuB8T9eh  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.local.md  Caddyfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  conftest.py  docker-compose.app.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pr-title.yml  release.yml  scorecard.yml  update-readme-code-stats.yml
.opencode/agent/: pr-reviewer.md
.opencode/command/: review-pr.md
backend/: Dockerfile  pyproject.toml
backend/tests/: conftest.py  test_cadsr_api.py  test_cadsr_download_api.py  test_cadsr_similar_api.py  test_cde_neighborhood_api.py  test_clinicaltrials_api.py  test_data_build_integration.py  test_decomposition_api.py  test_decomposition_provenance_api.py  test_embeddings_api.py  test_hardening.py  test_health.py  test_mappings_api.py  test_migrations_integration.py  test_migrations_revision_ids.py  test_ncit_api.py  test_ncit_api_integration.py  test_ncit_search_index_integration.py  test_owl_download_api.py  test_platform.py  test_pubmed_api.py  test_refresh_api.py  test_sparql_api.py  test_sparql_guard.py  test_test_runner.py
docs/: ARCHITECTURE.md  DATA_SETUP.md  DECISIONS.md  ROADMAP.md  postcoordination-literature-review.md
docs/design/: README.md  ncit-decomposition-assessment.md  ncit-decomposition-engine.md  ncit-external-integration.md  ncit-regimen-decomposition.md
docs/ecosystem/: ncit-cadsr-naaccr.md
fairlib/: pyproject.toml
frontend/: .fallowrc.jsonc  .gitignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest-setup-client.ts
frontend/src/: app.css  (+2 more)
migrations/: env.py
ontolib/: pyproject.toml
ontolib/src/ontolib/: __init__.py
ontolib/src/ontolib/common/: __init__.py
ontolib/src/ontolib/core/: __init__.py  download_cache.py  exceptions.py  logging_config.py
ontolib/src/ontolib/decomposition/: axes.py  constituent_index.py  detector.py  extract.py  fidelity.py  filler_selection.py  legacy_writer.py  minting.py  models.py  nlp_fallback.py  provenance.py  provenance_models.py  read.py  read_models.py  read_queries.py  run.py  score.py  site_resolution.py  stated_queries.py  vocab.py  walker.py
ontolib/src/ontolib/repositories/: __init__.py
ontolib/src/ontolib/repositories/cadsr/: __init__.py  build.py  download.py  repository.py
ontolib/src/ontolib/repositories/clinicaltrials/: __init__.py  client.py  models.py  parser.py
ontolib/src/ontolib/repositories/embeddings/: generate.py
ontolib/src/ontolib/repositories/pubmed/: __init__.py  client.py  models.py  parser.py
ontolib/src/ontolib/repositories/xref/: bridge.py  cadsr_anchors.py  candidate_ingest.py  coverage.py  evidence.py  mapping_score.py  models.py  promotion.py  store.py  ttl_writer.py  validation.py  vocab.py
ontolib/src/ontolib/terminologies/: namespaces.py  oxigraph_http_client.py
ontolib/src/ontolib/terminologies/ncit/: __init__.py  graph_store.py  models.py  owl_download.py  owl_load.py  property_codes.py  role_queries.py  search_index.py
ontolib/tests/: test_smoke.py
ontolib/tests/core/: test_download_cache.py  test_logging_config.py
ontolib/tests/data/: ncit_decomposed_neoplasm.ttl
ontolib/tests/decomposition/: test_additivity_integration.py  test_axes.py  test_constituent_index.py  test_detector.py  test_differentia_extractor.py  test_extract.py  test_fidelity.py  test_filler_selection.py  test_legacy_writer.py  test_minting.py  test_models.py  test_nlp_fallback.py  test_provenance.py  test_provenance_integration.py  test_read.py  test_read_integration.py  test_read_queries.py  test_read_upstream.py  test_run.py  test_score.py  test_site_resolution.py  test_stated_integration.py  test_stated_queries.py  test_vocab.py  test_walker.py
ontolib/tests/decomposition/golden/: README.md  minted-concepts.json  neoplasm-draft.json  neoplasm.json
ontolib/tests/dev/: test_update_readme_code_stats.py
ontolib/tests/repositories/: conftest.py  test_cadsr_build.py  test_cadsr_download.py  test_cadsr_fts.py  test_cadsr_repository.py  test_clinicaltrials_client.py  test_clinicaltrials_parser.py  test_embeddings_generate.py  test_embeddings_store.py  test_pubmed_client.py  test_pubmed_parser.py
ontolib/tests/repositories/xref/: test_additivity_integration.py  test_bridge.py  test_cadsr_anchors.py  test_candidate_ingest.py  test_coverage.py  test_evidence.py  test_mapping_score.py  test_migration_roundtrip.py  test_models.py  test_promotion.py  test_promotion_persistence.py  test_reasoner_contract.py  test_store_roundtrip.py  test_ttl_writer.py  test_upstream_data_contract.py  test_validation.py
ontolib/tests/repositories/xref/golden/: mappings.json
ontolib/tests/terminologies/: conftest.py  test_ncit_graph_store.py  test_ncit_search_index.py  test_ncit_search_ranking_integration.py  test_ncit_store_integration.py  test_owl_download.py  test_owl_load.py  test_oxigraph_client_http.py  test_oxigraph_http_client.py  test_oxigraph_load.py  test_retry_backoff.py  test_role_queries.py
scripts/: data_build.py  decompose.py  decomposition_spike.py  dev.sh  test_runner.py
(+153 files in other folders)
