[project]
name = "ontoprism"
version = "0.1.0"
description = "Ontology storage, query, and graph-visualization platform producing a decomposed (non-pre-coordinated) NCIt."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Hannes Niedner" }]

# Runtime deps for the ontology vertical slice lifted from fairdata.
# Deliberately trimmed: no AWS/bedrock/redis/opensearch/mlxtend — those belong to
# the fairdata subsystems (pipeline/HRM/learning/audit) we are NOT lifting.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx[socks]>=0.28.1",       # Oxigraph HTTP client + Starlette TestClient
    "pydantic>=2.8.0",
    "pydantic-settings>=2.14.2",
    "pyoxigraph>=0.5.2",          # embedded Oxigraph / pyoxigraph_compat
    "rdflib>=7.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "asyncpg>=0.28.0",
    "structlog>=23.1.0",
    "rich>=13.4.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.3",
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
# Editable installs of the keep-names local packages. This makes `import fairlib`
# and `import backend` resolve via the venv in any pytest import mode — no sys.path
# hacks, no outer-namespace-dir shadowing.
local = [
    "-e file:///${PROJECT_ROOT}/fairlib",
    "-e file:///${PROJECT_ROOT}/backend",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",          # parallel sharding (matches the global test-runner hook)
]
lint = [
    "ruff==0.15.4",
    "basedpyright==1.38.2",
    "pre-commit>=4.0",
    "radon>=6.0",             # cyclomatic-complexity gate (check_complexity.py)
]

# ---------------------------------------------------------------------------
# Test runner. Raw `pytest` is blocked by a global hook — always use these
# `pdm run test*` scripts. `-n auto` shards across cores via pytest-xdist.
# ---------------------------------------------------------------------------
# Use the `pytest` console script (not `python -m pytest`): the module form prepends
# the repo root to sys.path, where the outer fairlib/ & backend/ dirs shadow the
# editable installs. The console script keeps import resolution clean.
[tool.pdm.scripts]
# Default runs exclude integration (which needs live Oxigraph/Postgres); opt in via
# test-integration. This keeps CI and quick local runs hermetic.
test = "pytest fairlib/tests backend/tests -m 'not integration' -n auto"
test-unit = "pytest fairlib/tests backend/tests -m unit -n auto"
test-backend-unit = "pytest backend/tests -m unit -n auto"
test-integration = "pytest fairlib/tests backend/tests -m integration"
test-ci = "pytest fairlib/tests backend/tests -m 'not integration' --cov=fairlib --cov=backend --cov-report=term-missing --cov-report=xml --cov-fail-under=80 -n auto"
test-smoke = "npm --prefix frontend run test:unit -- --run"
pytest = "pytest"
lint = { composite = ["ruff check .", "basedpyright"] }
fmt = "ruff format ."

[tool.pytest.ini_options]
# prepend import mode: our keep-names layout has top dirs (fairlib/, backend/) whose
# names equal the packages, which makes pytest's importlib mode pre-bind sys.modules
# to the outer namespace dir and shadow the editable install. prepend avoids that.
# Trade-off: test module basenames must be unique per directory (revisit when lifting
# fairdata's large suite — see docs/DECISIONS.md).
addopts = "-ra -q --strict-markers --strict-config --import-mode=prepend"
minversion = "8.0"
# fairlib and backend are installed editable (see [tool.pdm.dev-dependencies]).
norecursedirs = ["build", "dist", ".git", ".venv", "node_modules", "frontend"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Fast unit tests with mocked externalities only",
    "integration: Tests against real running services (Oxigraph :7878/:7879, Postgres :5432)",
    "api: API contract tests exercising HTTP endpoints",
    "e2e: End-to-end tests",
    "slow: Tests that take more than 1 second",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["fairlib/src", "backend/src", "fairlib/tests", "backend/tests"]

[tool.ruff.lint]
select = [
    "F", "E", "W",      # pyflakes + pycodestyle
    "C90",              # mccabe complexity
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # flake8-bugbear
    "SIM",              # flake8-simplify
    "C4",               # flake8-comprehensions
    "PT",               # flake8-pytest-style
    "RUF",              # ruff-specific
    "S",                # flake8-bandit (security)
    "ASYNC",            # flake8-async
    "TCH",              # type-checking imports
    "PL",               # pylint
]
ignore = [
    "PLR0913",          # too many args (FastAPI DI, query builders)
    "ASYNC240", "ASYNC250",  # sync Path/os ops in async are fine (we use asyncio)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "PLR2004"]  # asserts + magic values are fine in tests

[tool.coverage.run]
source = ["fairlib/src", "backend/src"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["fairlib/src", "backend/src"]
extraPaths = ["fairlib/src", "backend/src"]
reportMissingImports = true
