[project]
name = "ontoprism"
version = "0.1.0"
description = "Ontology storage, query, and graph-visualization platform producing a decomposed (non-pre-coordinated) NCIt."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Hannes Niedner" }]

# Runtime deps for the ontology vertical slice lifted from fairdata.
# Deliberately trimmed: no AWS/bedrock/redis/opensearch/mlxtend — those belong to
# the fairdata subsystems (pipeline/HRM/learning/audit) we are NOT lifting.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx[socks]>=0.28.1",       # Oxigraph HTTP client + Starlette TestClient
    "pydantic>=2.8.0",
    "pydantic-settings>=2.14.2",
    "pyoxigraph>=0.5.2",          # embedded Oxigraph / pyoxigraph_compat
    "rdflib>=7.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "asyncpg>=0.28.0",
    "greenlet>=3.1",              # required by SQLAlchemy async
    "structlog>=23.1.0",
    "rich>=13.4.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.3",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
# Heavy, build-time-only ML stack for the standalone data build (embedding
# generation). NOT installed by default (keeps the runtime image + CI lean); opt in
# with `pdm install -G data-build`. The runtime only reads vectors from pgvector.
data-build = [
    "sentence-transformers>=3.0",
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
# Editable installs of the keep-names local packages. This makes `import ontolib`
# and `import backend` resolve via the venv in any pytest import mode — no sys.path
# hacks, no outer-namespace-dir shadowing.
local = [
    "-e file:///${PROJECT_ROOT}/ontolib",
    "-e file:///${PROJECT_ROOT}/backend",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",          # parallel sharding (matches the global test-runner hook)
    "httpx2>=2.5",               # Starlette TestClient prefers httpx2 (silences its deprecation)
]
lint = [
    "ruff==0.15.20",
    "basedpyright==1.39.9",
    "pre-commit>=4.0",
    "radon>=6.0",             # cyclomatic-complexity gate (check_complexity.py)
]

# ---------------------------------------------------------------------------
# Test runner. Raw `pytest` is blocked by a global hook — always use these
# `pdm run test*` scripts. `-n auto` shards across cores via pytest-xdist.
# ---------------------------------------------------------------------------
# Use the `pytest` console script (not `python -m pytest`): the module form prepends
# the repo root to sys.path, where the outer ontolib/ & backend/ dirs shadow the
# editable installs. The console script keeps import resolution clean.
[tool.pdm.scripts]
# Default runs exclude integration (which needs live Oxigraph/Postgres); opt in via
# test-integration. This keeps CI and quick local runs hermetic.
test = "pytest ontolib/tests backend/tests -m 'not integration' -n auto"
test-unit = "pytest ontolib/tests backend/tests -m unit -n auto"
test-backend-unit = "pytest backend/tests -m unit -n auto"
test-integration = "pytest ontolib/tests backend/tests -m integration"
# CI integration run against a small seeded fixture (excludes full_build tests, which
# assert the pinned 12.8M-triple production build / real generated embeddings).
test-integration-ci = "pytest ontolib/tests backend/tests -m 'integration and not full_build'"
test-ci = "pytest ontolib/tests backend/tests -m 'not integration' --cov --cov-report=term-missing --cov-report=xml --cov-fail-under=80 -n auto"
test-smoke = "npm --prefix frontend run test:unit -- --run"
test-summary = "python scripts/test_runner.py"  # colored per-suite summary table
pytest = "pytest"
lint = { composite = ["ruff check .", "basedpyright"] }
fmt = "ruff format ."

# --- DB schema migrations (Alembic; URL from settings via migrations/env.py) ---
migrate = "alembic upgrade head"
migrate-down = "alembic downgrade -1"
migrate-stamp = "alembic stamp head"  # mark the pre-existing cloned DB as migrated
migrate-rev = "alembic revision -m"

# --- Standalone data build (issue #7): needs `pdm install -G data-build` for the ---
# --- embedding step. `data-build all` runs owl -> cadsr -> embeddings (migrate first). ---
data-build = "python scripts/data_build.py"

# --- Dev process management (backend :8011 + frontend :5175), fairdata-style ---
up = "docker compose up -d"
down = "docker compose down"
start-all = { shell = "bash scripts/dev.sh start all" }
stop-all = { shell = "bash scripts/dev.sh stop all" }
restart-all = { shell = "bash scripts/dev.sh restart all" }
start-backend = { shell = "bash scripts/dev.sh start backend" }
stop-backend = { shell = "bash scripts/dev.sh stop backend" }
restart-backend = { shell = "bash scripts/dev.sh restart backend" }
start-frontend = { shell = "bash scripts/dev.sh start frontend" }
stop-frontend = { shell = "bash scripts/dev.sh stop frontend" }
restart-frontend = { shell = "bash scripts/dev.sh restart frontend" }

[tool.pytest.ini_options]
# prepend import mode: our keep-names layout has top dirs (ontolib/, backend/) whose
# names equal the packages, which makes pytest's importlib mode pre-bind sys.modules
# to the outer namespace dir and shadow the editable install. prepend avoids that.
# Trade-off: test module basenames must be unique per directory (revisit when lifting
# fairdata's large suite — see docs/DECISIONS.md).
addopts = "-ra -q --strict-markers --strict-config --import-mode=prepend"
minversion = "8.0"
# ontolib and backend are installed editable (see [tool.pdm.dev-dependencies]).
norecursedirs = ["build", "dist", ".git", ".venv", "node_modules", "frontend"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Fast unit tests with mocked externalities only",
    "integration: Tests against real running services (Oxigraph :7888/:7889, Postgres :5433)",
    "full_build: Integration tests that require the full pinned NCIt build / real generated embeddings (excluded from the seeded-fixture CI run)",
    "api: API contract tests exercising HTTP endpoints",
    "e2e: End-to-end tests",
    "slow: Tests that take more than 1 second",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["ontolib/src", "backend/src", "ontolib/tests", "backend/tests"]

[tool.ruff.lint]
select = [
    "F", "E", "W",      # pyflakes + pycodestyle
    "C90",              # mccabe complexity
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # flake8-bugbear
    "SIM",              # flake8-simplify
    "C4",               # flake8-comprehensions
    "PT",               # flake8-pytest-style
    "RUF",              # ruff-specific
    "S",                # flake8-bandit (security)
    "ASYNC",            # flake8-async
    "TCH",              # type-checking imports
    "PL",               # pylint
]
ignore = [
    "PLR0913",          # too many args (FastAPI DI, query builders)
    "ASYNC240", "ASYNC250",  # sync Path/os ops in async are fine (we use asyncio)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "PLR2004"]  # asserts + magic values are fine in tests

[tool.coverage.run]
source = ["ontolib/src", "backend/src"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["ontolib/src", "backend/src"]
extraPaths = ["ontolib/src", "backend/src"]
reportMissingImports = true
