[project]
name = "ontoprism"
version = "0.7.3"
description = "Ontology storage, query, and graph-visualization platform producing a decomposed (non-pre-coordinated) NCIt."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Hannes Niedner" }]

# Runtime deps for the ontology vertical slice lifted from fairdata.
# Deliberately trimmed: no AWS/bedrock/redis/opensearch/mlxtend — those belong to
# the fairdata subsystems (pipeline/HRM/learning/audit) we are NOT lifting.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx[socks]>=0.28.1",       # Oxigraph HTTP client + Starlette TestClient
    "pydantic>=2.8.0",
    "pydantic-settings>=2.14.2",
    "pyoxigraph>=0.5.2",          # embedded Oxigraph / pyoxigraph_compat
    "rdflib>=7.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "asyncpg>=0.28.0",
    "greenlet>=3.1",              # required by SQLAlchemy async
    "structlog>=23.1.0",
    "rich>=13.4.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.3",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
# Heavy, build-time-only ML stack for the standalone data build (embedding
# generation). NOT installed by default (keeps the runtime image + CI lean); opt in
# with `pdm install -G data-build`. The runtime only reads vectors from pgvector.
data-build = [
    "sentence-transformers>=3.0",
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
# Editable installs of the keep-names local packages. This makes `import ontolib`
# and `import backend` resolve via the venv in any pytest import mode — no sys.path
# hacks, no outer-namespace-dir shadowing.
local = [
    "-e file:///${PROJECT_ROOT}/ontolib",
    "-e file:///${PROJECT_ROOT}/backend",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",          # parallel sharding (matches the global test-runner hook)
    "httpx2>=2.5",               # Starlette TestClient prefers httpx2 (silences its deprecation)
]
lint = [
    "ruff==0.15.20",
    "basedpyright==1.39.9",
    "pre-commit>=4.0",
    "radon>=6.0",             # cyclomatic-complexity gate (check_complexity.py)
]

# ---------------------------------------------------------------------------
# Test runner. Raw `pytest` is blocked by a global hook — always use these
# `pdm run test*` scripts. `-n auto` shards across cores via pytest-xdist.
# ---------------------------------------------------------------------------
# Use the `pytest` console script (not `python -m pytest`): the module form prepends
# the repo root to sys.path, where the outer ontolib/ & backend/ dirs shadow the
# editable installs. The console script keeps import resolution clean.
[tool.pdm.scripts]
# Default `test`: the grouped, colored summary runner over the hermetic suites
# (backend unit/api/security + frontend vitest). `pdm run test --all` adds the slow
# suites (live-store integration, e2e). Coverage is the separate `test-ci` gate.
test = "python scripts/test_runner.py"
test-unit = "pytest ontolib/tests backend/tests -m unit -n auto"
test-backend-unit = "pytest backend/tests -m unit -n auto"
test-integration = "pytest ontolib/tests backend/tests -m integration"
# CI integration run against a small seeded fixture (excludes full_build tests, which
# assert the pinned 12.8M-triple production build / real generated embeddings).
test-integration-ci = "pytest ontolib/tests backend/tests -m 'integration and not full_build'"
test-ci = "pytest ontolib/tests backend/tests -m 'not integration' --cov --cov-report=term-missing --cov-report=xml --cov-fail-under=90 -n auto"
test-smoke = "npm --prefix frontend run test:unit -- --run"
pytest = "pytest"
lint = { composite = ["ruff check .", "basedpyright"] }
fmt = "ruff format ."

# --- DB schema migrations (Alembic; URL from settings via migrations/env.py) ---
migrate = "alembic upgrade head"
migrate-down = "alembic downgrade -1"
migrate-stamp = "alembic stamp head"  # mark the pre-existing cloned DB as migrated
migrate-rev = "alembic revision -m"

# --- Standalone data build (issue #7): needs `pdm install -G data-build` for the ---
# --- embedding step. `data-build all` runs owl -> cadsr -> embeddings (migrate first). ---
data-build = "python scripts/data_build.py"
# Decomposition extraction research spike (#4): score a candidate stated-extraction
# against the curated golden set. Needs the stated NCIt graph loaded. Manual, not CI.
decompose-spike = "python scripts/decomposition_spike.py"
# Decomposition engine CLI (design §9 / §12 PR 5b): run the pipeline for a branch.
decompose = "python scripts/decompose.py"
# --- Dev process management (backend :8011 + frontend :5175), fairdata-style ---
up = "docker compose up -d"
down = "docker compose down"
start-all = { shell = "bash scripts/dev.sh start all" }
stop-all = { shell = "bash scripts/dev.sh stop all" }
restart-all = { shell = "bash scripts/dev.sh restart all" }
start-backend = { shell = "bash scripts/dev.sh start backend" }
stop-backend = { shell = "bash scripts/dev.sh stop backend" }
restart-backend = { shell = "bash scripts/dev.sh restart backend" }
start-frontend = { shell = "bash scripts/dev.sh start frontend" }
stop-frontend = { shell = "bash scripts/dev.sh stop frontend" }
restart-frontend = { shell = "bash scripts/dev.sh restart frontend" }

[tool.pytest.ini_options]
# prepend import mode: our keep-names layout has top dirs (ontolib/, backend/) whose
# names equal the packages, which makes pytest's importlib mode pre-bind sys.modules
# to the outer namespace dir and shadow the editable install. prepend avoids that.
# Trade-off: test module basenames must be unique per directory (revisit when lifting
# fairdata's large suite — see docs/DECISIONS.md).
addopts = "-ra -q --strict-markers --strict-config --import-mode=prepend"
minversion = "8.0"
# ontolib and backend are installed editable (see [tool.pdm.dev-dependencies]).
norecursedirs = ["build", "dist", ".git", ".venv", "node_modules", "frontend"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Fast unit tests with mocked externalities only",
    "integration: Tests against real running services (Oxigraph :7888/:7889, Postgres :5433)",
    "full_build: Integration tests that require the full pinned NCIt build / real generated embeddings (excluded from the seeded-fixture CI run)",
    "api: API contract tests exercising HTTP endpoints",
    "security: Security-hardening controls (headers, CORS, authz, rate limiting, injection/path-traversal guards)",
    "e2e: End-to-end tests",
    "slow: Tests that take more than 1 second",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["ontolib/src", "backend/src", "ontolib/tests", "backend/tests"]

[tool.ruff.lint]
select = [
    "F", "E", "W",      # pyflakes + pycodestyle
    "C90",              # mccabe complexity
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # flake8-bugbear
    "SIM",              # flake8-simplify
    "C4",               # flake8-comprehensions
    "PT",               # flake8-pytest-style
    "RUF",              # ruff-specific
    "S",                # flake8-bandit (security)
    "ASYNC",            # flake8-async
    "TCH",              # type-checking imports
    "PL",               # pylint
]
ignore = [
    "PLR0913",          # too many args (FastAPI DI, query builders)
    "ASYNC240", "ASYNC250",  # sync Path/os ops in async are fine (we use asyncio)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "PLR2004"]
"/**/decomposition/legacy_writer.py" = [
       "TC003",    # Path used at runtime for .mkdir/.write_text
 ]
"scripts/decompose.py" = [
       "TC003",    # Path used at runtime — typer resolves Annotated types via get_type_hints
 ]
"scripts/dev/reconstruct_versions.py" = [
       "S603",    # subprocess args are literals from the module-level MILESTONES tuple
       "S607",    # `git` from PATH — this is a developer script, not a runtime component
 ]

[tool.coverage.run]
source = ["ontolib/src", "backend/src"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["ontolib/src", "backend/src"]
extraPaths = ["ontolib/src", "backend/src"]
reportMissingImports = true

# --- Automated versioning (.github/workflows/release.yml) -----------------------
# python-semantic-release computes the next version from Conventional Commit
# subjects since the last tag, stamps it into every manifest below, regenerates
# CHANGELOG.md, tags, and cuts a GitHub release.
#
# Pre-1.0 policy (SemVer §4: "Major version zero is for initial development;
# anything MAY change at any time; the public API SHOULD NOT be considered
# stable"). ontoprism is pre-production with no external consumers, so:
#   allow_zero_version = true   → stay on 0.y.z
#   major_on_zero      = false  → a breaking change bumps 0.7.x → 0.8.0; it does
#                                 NOT auto-promote to 1.0.0. Reaching 1.0.0 is a
#                                 deliberate act ("this API is now stable"), never
#                                 the side effect of a stray `!` in a commit.
#   minor_on_zero      = true   → `feat` bumps the minor digit; `fix`/`perf` patch.
# Cut 1.0.0 by hand (`semantic-release version --major`) once README's goals are
# met and the HTTP API is frozen.
#
# We deliberately do NOT use a prerelease token on main. The sibling fairdata repo
# publishes `1.0.0-beta.N` and then runs `gh release edit --prerelease=false
# --latest` on every release to make it visible — a self-contradiction (a
# prerelease marked not-a-prerelease). Plain 0.y.z states the same thing honestly
# and needs no fixup step.
[tool.semantic_release]
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false
minor_on_zero = true
commit_message = "chore(release): {version} [skip ci]"
commit_author = "ontoprism-bot <noreply@ontoprism.invalid>"

# The root project is `distribution = false` (a PDM workspace, not a wheel), so
# there is nothing to build or upload. (`upload_to_pypi` is NOT set: it was removed
# in python-semantic-release v8 and is silently ignored today — fairdata's config
# still carries it, where it does nothing.)
#
# The "build" step instead re-stamps `pdm.lock`, which pins the two editable local
# packages (`ontolib`, `ontoprism-backend`) by version. `pdm sync` reconciles the
# working set *to the lock*, so without this every release leaves the lock naming the
# old version and `pdm sync` reports a bogus "Update ontolib 0.7.1 -> 0.1.0".
# A full `pdm lock` would also silently re-resolve third-party deps into the release
# commit; the script edits only those two fields. See its docstring.
build_command = "python scripts/dev/stamp_lock_version.py"

# Files beyond the version manifests to include in the release commit.
assets = ["pdm.lock"]

# One commit stamps all five manifests. fairdata needs a second `sync_versions.py`
# commit for this, which then has to be filtered back out of the next changelog;
# letting semantic-release own every version file avoids both problems.
version_toml = [
    "pyproject.toml:project.version",
    "ontolib/pyproject.toml:project.version",
    "backend/pyproject.toml:project.version",
]
version_variables = [
    "ontolib/src/ontolib/__init__.py:__version__",
    "frontend/package.json:version",
]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
# Only these bump a version; `other_allowed_tags` land in the changelog at the
# same level of detail but never move the number. `allowed_tags` is derived from
# the three lists, so do not set it directly.
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = [
    "docs", "style", "refactor", "test",
    "chore", "build", "ci", "revert", "security", "deprecate",
]
# Merge commits carry no semantics of their own — the PR's own commits do. When a
# PR is squash-merged, the squashed body is unpacked and each line parsed, so a
# conventional PR title (enforced by .github/workflows/pr-title.yml) is what
# drives the bump. Both are the v10 defaults; pinned here because the whole
# release scheme depends on them.
ignore_merge_commits = true
parse_squash_commits = true

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"
exclude_commit_patterns = [
    "^Merge pull request",
    "^Merge branch",
    "^chore\\(release\\):",
    "^chore\\(deps\\):",
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = false
