[project]
name = "ontolib"
version = "0.11.0"
description = "Ontology/terminology core (storage, terminologies, cadsr) for ontoprism."
requires-python = ">=3.13,<3.14"
# Runtime deps are declared centrally in the root project; this package stays light.
dependencies = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"
